src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>BST_BAX_SALES_TEAM__c</fullName>
        <description>BST - field used to track the Main Product Category</description>
        <label>Main Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BST_Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>BST_Main_Product_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_BOOST_Campaign_ID__c</fullName>
        <displayFormat>C-{00000}</displayFormat>
        <label>BOOST Campaign ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>BST_Campaign_1__c</fullName>
        <description>BST - Generic Country Section Field</description>
        <label>Campaign $ 1</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BST_Campaign_2__c</fullName>
        <description>BST - Generic Country Section Field</description>
        <label>Campaign $ 2</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BST_Campaign_Date_1__c</fullName>
        <description>BST - Generic Country Section Field</description>
        <label>Campaign Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BST_Campaign_Date_2__c</fullName>
        <description>BST - Generic Country Section Field</description>
        <label>Campaign Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BST_Campaign_P1__c</fullName>
        <defaultValue>1</defaultValue>
        <description>BST - This field is used for analytics</description>
        <label>Campaign P1</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BST_Campaign_Text_1__c</fullName>
        <description>BST - Generic Country Section Field</description>
        <label>Campaign Text 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_Campaign_Text_2__c</fullName>
        <description>BST - Generic Country Section Field</description>
        <label>Campaign Text 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_Campaign_Text_3__c</fullName>
        <description>BST - Generic Country Section Field</description>
        <label>Campaign Text 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_Country__c</fullName>
        <description>BST - Field to track the country.</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BST_Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_DETAILS__c</fullName>
        <description>BST - this field will allow to store the details about the strategic goal or the Lead Metrics</description>
        <inlineHelpText>BST - this field will allow to store the details about the strategic goal or the Lead Metrics</inlineHelpText>
        <label>Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BST_Ending_Value__c</fullName>
        <label>Ending Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BST_ExternalId__c</fullName>
        <label>ExternalId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_Metric_Notes__c</fullName>
        <label>Metric Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BST_PARENT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>BST - this field allows the association of a child to parent. In this case a lead metric to be associated with a Critical Goal</description>
        <inlineHelpText>BST - this field allows the association of a child to parent. In this case a lead metric to be associated with a Critical Goal</inlineHelpText>
        <label>Parent</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.RecordType.Name</field>
                <operation>equals</operation>
                <value>Strategic Goal</value>
            </filterItems>
            <filterItems>
                <field>$Source.BST_Country__c</field>
                <operation>equals</operation>
                <valueField>Campaign.BST_Country__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BST_Q1__c</fullName>
        <label>Q1</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BST_Q2__c</fullName>
        <label>Q2</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BST_Q3__c</fullName>
        <label>Q3</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BST_Related_to__c</fullName>
        <label>Related to</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_Starting_Value__c</fullName>
        <label>Starting Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DB_Campaign_Tactic__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Campaign Tactic</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Employment Seminars</fullName>
                </value>
                <value>
                    <fullName>Internal Website</fullName>
                </value>
                <value>
                    <fullName>Lunches</fullName>
                </value>
                <value>
                    <fullName>Online Banners/Ads</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partners</fullName>
                </value>
                <value>
                    <fullName>Print Advertisement</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Referral Program</fullName>
                </value>
                <value>
                    <fullName>Sales Call Down</fullName>
                </value>
                <value>
                    <fullName>Webinars</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>BST_Country__c</columns>
        <columns>BST_BAX_SALES_TEAM__c</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>BST_Country__c</field>
            <operation>equals</operation>
            <value>Belgium</value>
        </filters>
        <filters>
            <field>CAMPAIGN.END_DATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2018</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>All_Campaigns</fullName>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>BST_Country__c</columns>
        <columns>BST_BAX_SALES_TEAM__c</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.END_DATE</field>
            <operation>equals</operation>
            <value>12/31/2018</value>
        </filters>
        <label>All Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>BST_Country__c</columns>
        <columns>BST_BAX_SALES_TEAM__c</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>BST_Lag_Metrics</fullName>
        <active>true</active>
        <description>BST - this record type is used for Lag Metrics (focused on Opportunities) associated with a Strategic Goal</description>
        <label>Lag Metrics</label>
    </recordTypes>
    <recordTypes>
        <fullName>BST_Lead_Metrics</fullName>
        <active>true</active>
        <description>BST - this record type is used for Lead Metrics (focused on Events) associated with a Strategic Goal</description>
        <label>Lead Metrics</label>
    </recordTypes>
    <recordTypes>
        <fullName>BST_Strategic_Goal</fullName>
        <active>true</active>
        <description>BST - this object will store the strategic goals for a specific country and franchise</description>
        <label>Strategic Goal</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>